--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -67,14 +67,14 @@
 	  <ul class="list-group" id="workoutList">
 	  <li class="list-group-item justify-content-between">
 	  	<p class="workoutname"> {{name}} <small class="durationText"> <!-- 5 min. --></small>
-		<!-- <a href="/custom/{{@index}}"> -->
-		<button type="button" class="start-btn" id="start-btn" onclick="startWorkout()" aria-label="Left Align">Workout</button>
+		<a href="/custom/{{@index}}">
+			<button type="button" class="start-btn" id="start-btn" onclick="startWorkout()" aria-label="Left Align">Workout</button>
+		</a>
 		</p>
-		<!-- </a> -->
 		<a href="/editworkout/{{@index}}">
-		<button type="button" class="edit-btn" id="editbtn" aria-label="Left Align">
-	  		<p>Edit</p>
-		</button>	
+			<button type="button" class="edit-btn" id="editbtn" aria-label="Left Align">
+		  		<p>Edit</p>
+			</button>	
 		</a>
 		{{#each this.exercises}}
 		<p class="exercise"> {{exname}} ({{this.time}} {{this.unit}}) </p>
@@ -104,8 +104,6 @@
 	function refresh() {
 		location.href = "library"
 	}
-
-
 </script>
 </form>
 </html>
