--- a/public/css/index.css
+++ b/public/css/index.css
@@ -129,12 +129,23 @@ a{
      margin-right: 35px;
 }
 
-#demo{
+#currtime{
     background-color: #ffffff;
     border: #ffffff;
     border radius: 25px;
     box-shadow: 0px 3px 6px 0px #00000020;
-    font-size: 58px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #3F4A4F;
+    padding: 10px;
+}
+
+#currexercise, #upnext{
+    background-color: #ffffff;
+    border: #ffffff;
+    border radius: 25px;
+    box-shadow: 0px 3px 6px 0px #00000020;
+    font-size: 250%;
     font-weight: bold;
     color: #3F4A4F;
     padding: 20px;
