--- a/public/css/index.css
+++ b/public/css/index.css
@@ -134,8 +134,7 @@ a{
     border: #ffffff;
     border radius: 25px;
     box-shadow: 0px 3px 6px 0px #00000020;
-    font-size: 30px;
-    font-weight: bold;
+    font-size: 25px;
     color: #3F4A4F;
     padding: 10px;
 }
@@ -145,10 +144,9 @@ a{
     border: #ffffff;
     border radius: 25px;
     box-shadow: 0px 3px 6px 0px #00000020;
-    font-size: 250%;
-    font-weight: bold;
+    font-size: 25px;
     color: #3F4A4F;
-    padding: 20px;
+    padding: 10px;
 }
 
 .navbar-text{
@@ -352,10 +350,10 @@ h3{
     padding-left: 20px;
 }
 
-#timerButtonPause{
-    width: 150px;
+#timerButtonPause, #timerButtonPlay, #timerButtonCancel{
+    width: 100px;
     height: 46px;
-    font-size: 24px;
+    font-size: 20px;
     color: #ffffff;
     background-color: #651fff;
     border: 2px solid #651fff;
@@ -365,7 +363,7 @@ h3{
     margin-top: 5px;
 }
 
-#timerButtonPlay{
+/*#timerButtonPlay{
     width: 150px;
     height: 50px;
     font-size: 24px;
@@ -389,7 +387,7 @@ h3{
     box-shadow: 0px 2px 3px 0px #00000020;
     margin-right: 10px;
     margin-top: 5px;
-}
+}*/
 
 
 input.form-control-lg.name-text-box{
