--- a/views/custom.handlebars
+++ b/views/custom.handlebars
@@ -77,45 +77,25 @@ function cancel() {
 <p id="upnext"></p>
 
 <audio id="audio">
-	<source src="../audio/Whistle.mp3" type="audio/mpeg">
+	<source id="audio" type="audio/mpeg">
 </audio>
 
 <!--START OF SCRIPT-->
 <script>
 window.onload = initialize();
 
-//audios
-var audio = document.getElementById("audio"); 
-
-function playAudio() { 
-    audio.play(); 
-} 
-
-// var exercises = {
-// 	exname: "",
-// 	time: "",
-// 	unit: "",
-// 	sound: ""
-// };
-
-// function addExercise(exn, tim, un, sd)
-// {
-// 	exercises.exname = exn;
-// 	exercises.time = tim;
-// 	exercises.unit = un;
-// 	exercises.sound = sd; 
-// 	setInterval(myTimer,1000);
-// }
-
 // TIMERS
 var index = -1;
-//console.log({{workout.exercises.0.min}});
-var orig = 0;//{{workout.exercises.[index].min}};
-var val = orig;
+
+var origtt = -1;
+var currtt = origtt;
+var min;
+var sec; 
 var increment = 1;
 var lowbounds = -1;
 var myVar;
 var exercises;
+var end = false;;
 
 
 function initialize(){
@@ -141,44 +121,64 @@ function initialize(){
 	{{/each}}
 
 	exercises = exercises2;
+
 	myVar =  setInterval(myTimer, 1000)
 }
 
 function myTimer() {
-	if(val == 0)
+	if(currtt == -1)
 	{
 		++index;
+
+		if(index != 0)
+		{
+			playAudio();
+		}
 		if(index >= exercises.length)
-		{}
+		{
+			end = true;
+			clearTimeout(myVar);
+		}
 		else{
-			val = exercises[index][1];
-			orig = val;
+			min = exercises[index][1];
+			sec = exercises[index][2];
+			currtt = min * 60 + sec;
+			origtt = currtt;
+			animate();
 		}
 
 	}
 
-	if(val <= lowbounds)
-    {
-    	clear();
-    }
-    else{
+    if(!end) {
     	/* setting the page */
-    	document.getElementById("currexercise").innerHTML = exercises[index][0];
-	    document.getElementById("currtime").innerHTML = val;
+    	document.getElementById("currexercise").innerHTML = "<b>" + exercises[index][0] + "</b>";
 
+
+
+	    document.getElementById("currtime").innerHTML = "<b>" + min + "</b>" + " min " + "<b>" + sec + "</b>" + " s";
+
+    	sec--
+    	if(sec < 0)
+    	{
+    		sec = 59;
+    		min--;
+    		if(min < 0)
+    			min = 0;
+    	}
+    	
 	    //setting new exercises
 	    var next ="";
 	    for(var i = index + 1; i < exercises.length; i++)
 	    {
 	    	if(i == index+1)
 	    	{
-	    		next += "Up Next: <br>";
+	    		next += "<b>Up Next: </b><br>";
 	    	}
 	    	next += "\t" + exercises[i][0] + "<br>";
 	    }
 	    if(next == "")
 	    {
-	  		document.getElementById("upnext").innerHTML = "Final Exercise!";
+	  		document.getElementById("upnext").innerHTML = "<b>Final Exercise!</b>";
 	  	}
 	  	else
 	  	{
@@ -187,15 +187,14 @@ function myTimer() {
 
 
 	    /* updating time */
-	    val -= increment;
+	  	currtt -= increment;
 	    animate();
 	}
-}
-
-function clear(){
-    clearTimeout(myVar);
-    playAudio();
-    //document.getElementById("demo").innerHTML = orig;
+	else{
+		document.getElementById("upnext").innerHTML = "<b>Done!</b>";
+		document.getElementById("timerButtonCancel").style.display = "none";
+		document.getElementById("timerButtonPause").style.display = "none";
+	}
 }
 
 function pause(){
@@ -213,9 +212,19 @@ function play(){
 //ANIMATION
 function animate(){
     $("#innerProgressBar").animate({
-        width: (1-((val+1)/(orig+1))) * 100 +'%'
+        width: (1-((currtt+1)/(origtt+1))) * 100 +'%'
     });
 }
+
+
+
+//audios
+var audio = document.getElementById("audio"); 
+
+function playAudio() { 
+	document.getElementById("audio").src = "../audio/" + exercises[index-1][3] + ".mp3";
+    audio.play(); 
+} 
 </script>
 
 </body>
