--- a/public/css/index.css
+++ b/public/css/index.css
@@ -32,6 +32,10 @@ a{
      color: #6e6e6e;
 }
 
+.custombtns{
+    vertical-align: center;
+    text-align: center;
+}
 
 .project a {
      text-align: center;
@@ -147,6 +151,11 @@ a{
     font-size: 25px;
     color: #3F4A4F;
     padding: 10px;
+}
+
+#currsets{
+    font-size: 20px;
+    color: #3F4A4F;
 }
 
 .navbar-text{
@@ -319,7 +328,6 @@ h3{
      height: 50px;
      width: 100%;
      margin-top: 20px;
-     margin-bottom: 200px;
      box-shadow: 0px 2px 5px 0px #00000020;
 }
 
@@ -329,7 +337,7 @@ h3{
      background-color: #651fff;
      height: 48px;
      width:0%;
-     margin-bottom: 20px;
+     margin-bottom: 15;
 }
 
 .divider{
@@ -360,7 +368,6 @@ h3{
     border-radius: 25px;
     box-shadow: 0px 2px 3px 0px #00000020;
     margin-right: 10px;
-    margin-top: 5px;
 }
 
 /*#timerButtonPlay{
@@ -405,27 +412,27 @@ input.form-control-lg.time-unit{
     font-size: 18px;
 }
 
-button#dropdownMenuButton1.btn.btn-secondary.dropdown-toggle{
-    background-color: #f5f5f5;
-    font-size: 16px;
-    color: #263238;
-    border: 2px solid #f5f5f5;
-    float: right;
-    margin-right: 10px;
-    width: 80px;
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-button#dropdownMenuButton1.btn.btn-secondary.dropdown-toggle:hover{
-    background-color: #651fff;
-    font-size: 16px;
-    color: #ffffff;
-    border: 2px solid #f5f5f5;
-    float: right;
-    margin-right: 10px;
-    width: 80px;
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
-button#dropdownMenuButton2.btn.btn-secondary.dropdown-toggle{
+.dropdown-item a:focus {
+    background-color: black!important;
+}
+
+/*button#dropdownMenuButton2.btn.btn-secondary.dropdown-toggle{
     background-color: #f5f5f5;
     font-size: 16px;
     color: #263238;
@@ -439,9 +446,9 @@ button#dropdownMenuButton2.btn.btn-secondary.dropdown-toggle:hover{
     font-size: 16px;
     border: 2px solid #f5f5f5;
     float: right;
-}
+}*/
 
-div.dropdown-menu{
+/*div.dropdown-menu{
     background-color: #f5f5f5;
     font-size: 16px;
     color: #263238;
@@ -474,7 +481,8 @@ a.dropdown-item:hover{
     font-size: 16px;
     border: 2px solid #f5f5f5;
     float: right;
-}
+}*/
+
 
 button#save-workout-btn{
     width: 150px;
@@ -522,3 +530,42 @@ button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle{
     font-size: 16px;
     box-shadow: 0px 2px 4px 0px #00000020;
 }
+
+
+
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.show {display:block;}
