--- a/public/css/editworkout.css
+++ b/public/css/editworkout.css
@@ -341,6 +341,18 @@ h3{
     padding-left: 20px;
 }
 
+.repetition-box{
+    background-color: #ffffff;
+    border-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 2px 6px 0px #00000020;
+    margin-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    padding-right: 30px;
+    padding-left: 20px;
+}
+
 #timerButtonPause{
     width: 150px;
     height: 46px;
@@ -429,6 +441,19 @@ button#dropdownMenuButton2.btn.btn-secondary.dropdown-toggle:hover{
     color: #ffffff;
     font-size: 16px;
     float: right;
+}
+
+button#addbtn.btn.btn-lg{
+    background-color: #651fff;
+    color: #ffffff;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 0px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    box-shadow: 0px 2px 4px 0px #00000020;
 }
 
 div.dropdown-menu{
