--- a/views/editworkout.handlebars
+++ b/views/editworkout.handlebars
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114946810-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114946810-1');
+</script>
+
 	<title>Workout</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +57,9 @@
 <body>
 
 <h3>{{workout.name}}</h3>
-
+<button type="button" class="btn btn-lg" id="addbtn" aria-label="Left Align">
+	  		<p>Save</p>
+		</button>
 	<input class="form-control input-lg" id="inputlg" placeholder="{{name}}" name="name" type="text">
   	<large> <!--10 min. --></large></br></br>
 	<h3>Exercises
@@ -56,9 +68,6 @@
 		  		<span class="glyphicon glyphicon-plus"  aria-hidden="true"></span>
 			</button>
 		</form>
-		<button type="button" class="btn btn-lg" id="addbtn" aria-label="Left Align">
-	  		<span class="glyphicon glyphicon-check" aria-hidden="true"></span>
-		</button>
 	</h3>
 
     {{#each workout.exercises}}
@@ -109,12 +118,12 @@
 		</div>
 	</div>
 	{{/each}}
-
+<div class="repetition-box">
 <h3>Repetitions</h3>
 	<div class="form-group time-text-box">
 			<input type="text" name="repetitions" class="form-control-lg time-unit" placeholder="{{this.repetitions}}" onkeypress='return event.charCode >= 48 && event.charCode <= 57'>
 	</div>
-
+</div>
 </br>
 </br>
 </br>
