--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -18,36 +18,12 @@
 	</style>
 	<!-- this is a comment in HTML -->
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->   
 	<nav class="navbar navbar-toggleable-md navbar-light" id="navigation">
 	  	<div class="container-fluid">
 	  		  <a id="title">flex</a>
-			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			    <span class="navbar-toggler-icon"></span>
-			  </button>
-			  <div class="collapse navbar-collapse" id="navbarNav">
-			    <ul class="navbar-nav">
-			      <li class="nav-item-active">
-			        <a class="nav-link" href="library"><font color="#651fff">Library</font><span class="sr-only">(current)</span></a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="stats">Stats</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="Timer">Timer</a>
-			      </li>
-			     <!--  <li class="nav-item">
-			        <a class="nav-link" href="settings">Settings</a>
-			      </li> -->
-			    </ul>
-			  </div>	
 		</div>
 	</nav>
+	
 </head>
 <script>
 	function home() {
@@ -68,7 +44,7 @@
 	  <li class="list-group-item justify-content-between">
 	  	<p class="workoutname"> {{name}} <small class="durationText"> <!-- 5 min. --></small>
 		<a href="/custom/{{@index}}">
-			<button type="button" class="start-btn" id="start-btn" onclick="startWorkout()" aria-label="Left Align">Workout</button>
+			<button type="button" class="start-btn" id="start-btn" onclick="startWorkout()" aria-label="Left Align">Start</button>
 		</a>
 		</p>
 		<a href="/editworkout/{{@index}}">
@@ -93,7 +69,6 @@
 <script type="text/javascript">
 	function addWorkout(val) {
 		document.getElementById("libraryForm").submit();
-//		location.href = "/editworkout/".concat(val);
 	}
 	function startWorkout() {
 		location.href = "custom"
