--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -69,6 +69,7 @@
 <script type="text/javascript">
 	function addWorkout(val) {
 		document.getElementById("libraryForm").submit();
+//		location.href = "/editworkout/".concat(val);
 	}
 	function startWorkout() {
 		location.href = "custom"
