--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -1,7 +1,12 @@
-<!doctype html>
-
 <html>
 <head>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114946810-1');
+</script>
 	<title>Flex</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
