--- a/public/css/index.css
+++ b/public/css/index.css
@@ -351,7 +351,7 @@ h3{
     padding-left: 20px;
 }
 
-#timerButtonPause, #timerButtonPlay, #timerButtonCancel{
+#timerButtonPause, #timerButtonPlay, #timerButtonCancel, #timerButtonStartOver{
     width: 100px;
     height: 46px;
     font-size: 20px;
@@ -361,6 +361,7 @@ h3{
     border-radius: 25px;
     box-shadow: 0px 2px 3px 0px #00000020;
     margin-right: 10px;
+    margin-top:10px;
 }
 
 /*#timerButtonPlay{
