--- a/views/editworkout.handlebars
+++ b/views/editworkout.handlebars
@@ -82,11 +82,11 @@
 						  		<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Blaster</button></li>
 								<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Confident</button></li>	
 								<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Definite</button></li>
-								<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Ding Ding</button></li
+								<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Ding Ding</button></li>
 						  		<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Glass</button></li>
-								<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Pluck</button></li
+								<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Pluck</button></li>
 						  		<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Spring</button></li>
-								<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Squeaks</button></li
+								<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Squeaks</button></li>
 						  		<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Unconvinced</button></li>
 								<li class="dropdown-item" id="listElem" onclick="updateSound({{@index}}, this)"><button class="soundElem">Whistle</button></li>
 						  	</ul>
