--- a/views/custom.handlebars
+++ b/views/custom.handlebars
@@ -107,7 +107,7 @@ function initialize(){
 		exercises2.push(arr);
 	{{/each}}
 
-	reps = {{workout.repetitions}};
+	reps = {{this.workout.repetitions}};
 	exercises = exercises2;
 
 	myVar =  setInterval(myTimer, 1000)
