--- a/public/css/editworkout.css
+++ b/public/css/editworkout.css
@@ -456,6 +456,20 @@ button#addbtn.btn.btn-lg{
     box-shadow: 0px 2px 4px 0px #00000020;
 }
 
+button#cancelbtn.btn.btn-lg{
+    background-color: #9E9E9E;
+    color: #ffffff;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 0px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    float: right;
+    font-size: 16px;
+    box-shadow: 0px 2px 4px 0px #00000020;
+}
+
 button#savebtn.btn.btn-lg{
     background-color: #651fff;
     color: #ffffff;
